Add topbar and basic styling

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="styles.css">
+
         <title>Credit card checkout page</title>
     </head>
     <body>
-        <h1>Credit card checkout page</h1>
-        <p>This is where the designing has to done</p>
+        <div class="topnav">
+            <a>YOUR ORDER</a>
+            <a>SHIPPING DETAILS</a>
+            <a class="active">PAYMENT DETAILS</a>
+            <a>CONFIRMATIONS</a>
+          </div>
+        <div></div>
     </body>
 </html>
