Try different whole layout

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
         <title>Credit card checkout page</title>
     </head>
     <body>
-        <div class="topnav">
+        <div class="row topnav">
             <a>YOUR ORDER</a>
             <a>SHIPPING DETAILS</a>
             <a class="active">PAYMENT DETAILS</a>
             <a>CONFIRMATIONS</a>
-          </div>
-        <div></div>
+        </div>
+        <div class="container">
+            <div class="col">
+                <h1>This is where the card will appear</h1>
+            </div>
+            <div class="col">
+                <h1>This is the place to enter the details</h1>
+            </div>
+        </div>
     </body>
 </html>
